--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "DARK_MODE=media expo start --android",
+    "ios": "DARK_MODE=media expo start --ios",
+    "web": "DARK_MODE=media expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
+    "@gluestack-ui/nativewind-utils": "^1.0.23",
+    "@gluestack-ui/overlay": "^0.1.15",
+    "@gluestack-ui/toast": "^1.0.7",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@types/react": "~18.2.79",
+    "babel-plugin-module-resolver": "^5.0.2",
     "clsx": "^2.1.1",
     "expo": "51.0.38",
     "expo-av": "~14.0.7",
@@ -21,21 +27,24 @@
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "install": "^0.13.0",
-    "nativewind": "^2.0.11",
+    "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
+    "react-native-css-interop": "^0.0.36",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^13.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
-    "tailwindcss": "3.3.2"
+    "jscodeshift": "^0.15.2",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
