aggiunti user subscribers

--- a/example.env
+++ b/example.env
@@ -8,3 +8,4 @@ EXPO_PUBLIC_APPWRITE_EVENTO_COLLECTION_ID=
 EXPO_PUBLIC_APPWRITE_EVENTO_IMMAGINE_COLLECTION_ID=
 EXPO_PUBLIC_APPWRITE_USER_EVENTO_COMMENTO_COLLECTION_ID=
 EXPO_PUBLIC_APPWRITE_USER_EVENTO_LIKE_COLLECTION_ID=
+EXPO_PUBLIC_APPWRITE_USER_EVENTO_SUBSCRIBER_COLLECTION_ID=
