--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
+    "init": "node ./setup/local.mjs && node ./setup/setup.mjs",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -27,6 +28,7 @@
     "expo-status-bar": "~1.12.1",
     "install": "^0.13.0",
     "nativewind": "^2.0.11",
+    "node-appwrite": "^14.1.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-animatable": "^1.4.0",
@@ -36,7 +38,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
