--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-picker/picker": "2.7.5",
+    "@tanstack/react-query": "^5.61.5",
     "@types/react": "~18.2.79",
+    "axios": "^1.7.8",
     "clsx": "^2.1.1",
     "expo": "51.0.38",
     "expo-av": "~14.0.7",
@@ -44,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@eslint/js": "^9.14.0",
+    "@tanstack/eslint-plugin-query": "^5.61.6",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
