--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
     "install": "^0.13.0",
+    "jsonwebtoken": "^9.0.2",
     "nativewind": "^2.0.11",
     "node-appwrite": "^14.1.0",
     "react": "18.2.0",
