--- a/package.json
+++ b/package.json
@@ -14,33 +14,32 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.1.0",
-    "@react-native-picker/picker": "2.7.5",
-    "@tanstack/react-query": "^5.61.5",
-    "@types/react": "~18.2.79",
+    "@react-native-picker/picker": "2.9.0",
+    "@tanstack/react-query": "^5.62.0",
+    "@types/react": "~18.3.12",
     "axios": "^1.7.8",
     "clsx": "^2.1.1",
-    "expo": "51.0.38",
-    "expo-av": "~14.0.7",
-    "expo-constants": "~16.0.2",
-    "expo-device": "~6.0.2",
-    "expo-document-picker": "~12.0.2",
-    "expo-font": "~12.0.10",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.11",
+    "expo-av": "~15.0.1",
+    "expo-constants": "~17.0.3",
+    "expo-device": "~7.0.1",
+    "expo-document-picker": "~13.0.1",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-router": "~4.0.9",
+    "expo-status-bar": "~2.0.0",
     "install": "^0.13.0",
-    "jsonwebtoken": "^9.0.2",
     "nativewind": "^2.0.11",
     "node-appwrite": "^14.1.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.2.2",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "typescript": "~5.3.3",
     "uuid": "^11.0.3"
@@ -48,7 +47,6 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@eslint/js": "^9.14.0",
-    "@tanstack/eslint-plugin-query": "^5.61.6",
     "eslint": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-typescript": "^3.6.3",
