--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-picker/picker": "2.9.0",
+    "@tanstack/react-query": "^5.62.0",
     "@types/react": "~18.3.12",
+    "axios": "^1.7.8",
     "clsx": "^2.1.1",
     "expo": "^52.0.11",
     "expo-av": "~15.0.1",
